--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-jwt": "^3.3.0",
+    "html-metadata": "git://github.com/mvolz/html-metadata.git",
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.2.9",
     "morgan": "~1.6.1",
