--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
+    "elasticsearch": "^10.1.3",
     "express": "~4.13.1",
     "express-jwt": "^3.3.0",
     "html-metadata": "git://github.com/mvolz/html-metadata.git",
